WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115575
[GStreamer] GStreamer log crashes in MediaPlayerPrivateGStreamerBase because of uninitialized category
https://bugs.webkit.org/show_bug.cgi?id=115575
Summary
[GStreamer] GStreamer log crashes in MediaPlayerPrivateGStreamerBase because ...
Xabier Rodríguez Calvar
Reported
2013-05-03 14:03:15 PDT
[GStreamer] GStreamer log crashes in MediaPlayerPrivateGStreamerBase because of uninitialized category
Attachments
Patch
(2.28 KB, patch)
2013-05-03 14:06 PDT
,
Xabier Rodríguez Calvar
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2013-05-03 14:06:23 PDT
Created
attachment 200468
[details]
Patch Fixes the cadebug category for MediaPlayerPrivatteGStreamerBase.
Philippe Normand
Comment 2
2013-05-03 15:20:43 PDT
Comment on
attachment 200468
[details]
Patch Oh I didn't know the debug category was declared twice. I think it would make more sense to declare it once in the Base header and as extern.
Philippe Normand
Comment 3
2013-05-03 15:21:30 PDT
If that's possible of course :)
Xabier Rodríguez Calvar
Comment 4
2013-05-03 15:44:14 PDT
(In reply to
comment #2
)
> (From update of
attachment 200468
[details]
) > Oh I didn't know the debug category was declared twice. I think it would make more sense to declare it once in the Base header and as extern.
The problem of that is the types, and exporting more things like this debug thing is not a very good idea. Base.h file is used in other places. We could create another common .h that we would include in both cpp file, but I think that's overkilling.
Philippe Normand
Comment 5
2013-05-03 15:44:36 PDT
Comment on
attachment 200468
[details]
Patch Oh sorry I misread the patch in the first place. This actually looks good to me :)
WebKit Commit Bot
Comment 6
2013-05-03 16:11:12 PDT
Comment on
attachment 200468
[details]
Patch Clearing flags on attachment: 200468 Committed
r149543
: <
http://trac.webkit.org/changeset/149543
>
WebKit Commit Bot
Comment 7
2013-05-03 16:11:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug