[GStreamer] GStreamer log crashes in MediaPlayerPrivateGStreamerBase because of uninitialized category https://bugs.webkit.org/show_bug.cgi?id=115575

Patch by Xabier Rodriguez Calvar <calvaris@igalia.com> on 2013-05-03
Reviewed by Philippe Normand.

No new tests needed.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
Using extern debug category.
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
Declaring debug category as not static.

Canonical link: https://commits.webkit.org/134008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149543 268f45cc-cd09-0410-ab3c-d52691b4dbfc